# capnproto-rust

capnp-futures/: Cargo.toml
capnp-futures/src/: lib.rs  read_stream.rs  serialize.rs  serialize_packed.rs
capnp/src/: lib.rs
capnpc/src/: codegen.rs
