[package]
name = "capnp-futures"
version = "0.21.0"
authors = ["David Renshaw <drenshaw@gmail.com>"]
license = "MIT"

description = "async serialization for Cap'n Proto messages"
repository = "https://github.com/dwrensha/capnproto-rust"
documentation = "https://docs.rs/capnp-futures/"
edition = "2021"

keywords = ["async"]

[features]
default = ["std"]
std = ["dep:futures-channel", "dep:futures-util", "capnp/std"]

[dependencies]
capnp = { version = "0.21.0", path = "../capnp", default-features = false, features = [
    "alloc",
    "embedded_io",
] }

[dependencies.embedded-io-async]
version = "0.6.1"
features = ["alloc"]

[dependencies.futures-channel]
version = "0.3.0"
default-features = false
optional = true
features = ["std"]

[dependencies.futures-util]
version = "0.3.0"
default-features = false
optional = true
features = ["io", "std"]

[dev-dependencies.futures]
version = "0.3.0"
default-features = false
features = ["std", "executor"]

[dev-dependencies.embedded-io-adapters]
version = "0.6.1"
default-features = false
features = ["std", "futures-03"]

[dev-dependencies]
capnp = { version = "0.21.0", path = "../capnp", features = ["quickcheck"] }
embedded-io = { version = "0.6.1", features = ["std"] }
embedded-io-async = { version = "0.6.1", features = ["std"] }
quickcheck = "1"

[lints]
workspace = true
